Votes controller fixed, namespace concept removed, fixed routes file

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -7,17 +7,17 @@
 	</center>
 </div>
 <div class="galry row">
-	<div class="content"><a href="/users/sign_up">
-		SIGN UP FOR<br>
+	<div class="content">
+		GET YOUR INVITE TO<br>
 		THE GREEN THUMB’S BRAND<br>
-		NEW MARKETPLACE!</a><span class="beta">BETA</span><br>
+		NEW MARKETPLACE! <span class="beta">BETA</span><br>
 	</div>
 </div>
 <div class="dv-deals" align="center">
 	<span class="caption">thumpsup deals</span>
 	<div class="container">
 		<div class="row">
-			<div class="col-xs-4 item">
+			<div class="col-xs-3 item">
 				<img src="/assets/D01.jpg">
 			</div>
 			<div class="col-xs-3 item">
@@ -28,7 +28,7 @@
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-xs-4 item">
+			<div class="col-xs-3 item">
 				<img src="/assets/D04.jpg">
 			</div>
 			<div class="col-xs-3 item">
@@ -38,5 +38,5 @@
 				<img src="/assets/D06.jpg">
 			</div>
 		</div>
-	</div>
+	</div> 
 </div>
