--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -14,8 +14,8 @@
 			<a href="">contact</a><br>
 		</div>
 		<div class="col-xs-4 pull-right">
-			<a href="#"><img src="/assets/TWITTER.png"></a>
-			<a href="#"><img src="/assets/FACEBOOK.png"></a>
+			<a href="http://twitter.com/GreenThumb"><img src="/assets/TWITTER.png"></a>
+			<a href="http://facebook.com/GreenThumb"><img src="/assets/FACEBOOK.png"></a>
 		</div>
 	</div>
 </footer>
