--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,7 +12,7 @@
  *= require bootstrap.min.css
  *= require font-awesome.min.css
  *= require main.css
+ *= require chosen.css
  * require style.css
  * require docs.min.css
- * require chosen.css
  */
