--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -2,12 +2,27 @@
   <h2>Sign up</h2>
 
   <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-    <%#= devise_error_messages! %>
-    <%= render "/shared/flash_messages" %>
+    <%= devise_error_messages! %>
+    <%#= render "/shared/flash_messages" %>
+
+    <div class="form-group">
+      <%= f.label :first_name %>
+      <%= f.text_field :first_name, autofocus: true, class: 'form-control' %>
+    </div>
+
+    <div class="form-group">
+      <%= f.label :last_name %>
+      <%= f.text_field :last_name, class: 'form-control' %>
+    </div>
+
+    <div class="form-group">
+      <%= f.label :address %>
+      <%= f.text_field :address, class: 'form-control' %>
+    </div>
 
     <div class="form-group">
     	<%= f.label :email %>
-    	<%= f.email_field :email, autofocus: true, class: 'form-control' %>
+    	<%= f.email_field :email, class: 'form-control' %>
     </div>
 
     <div class="form-group">
