changed and fixed catogories, changed link tags on index.html.erb

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,7 +2,7 @@
 	<center>
 		<div class="categories_div">
 			<%= dv_all_categories %><BR>
-			<a href="" style="color:#da4038;">DONATION CENTER</a>
+			<a href="https://www.kickstarter.com/" style="color:#da4038;">DONATION CENTER</a>
 		</div>
 	</center>
 </div>
@@ -38,5 +38,5 @@
 				<img src="/assets/D06.jpg">
 			</div>
 		</div>
-	</div> 
+	</div>
 </div>
