--- a/app/views/devise/shared/_links.erb
+++ b/app/views/devise/shared/_links.erb
@@ -23,3 +23,14 @@
     <%= link_to "Sign in with #{provider.to_s.titleize}", omniauth_authorize_path(resource_name, provider), class: 'btn btn-default' %>
   <% end -%>
 <% end -%>
+
+<br><hr>
+<center>
+OR
+
+<div class="social" style="margin: 20px;">
+	<a href="/auth/facebook"><img src="/assets/facebook.png"></a>
+	<a href="/auth/twitter"><img src="/assets/twitter.png"></a>
+</div>
+
+</center>
