--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,4 +1,4 @@
-<footer>
+<footer class="bottom-footer">
 	<div class="container">
 		<div class="col-xs-3 pull-left">
 			<div class="f1">THE GREEN THUMB ©2014</div>
