--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,6 +13,6 @@
  *= require font-awesome.min.css
  *= require main.css
  *= require chosen.css
- * require style.css
- * require docs.min.css
+ *= require style.css
+ *= require docs.min.css
  */
