--- a/app/views/shared/_disqus.html.erb
+++ b/app/views/shared/_disqus.html.erb
@@ -2,6 +2,8 @@
 <script type="text/javascript">
     /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
     var disqus_shortname = 'greenthumb'; // required: replace example with your forum shortname
+    var disqus_identifier = '<%= product.id %>';
+    var disqus_title = '<%= product.name.titlecase %>';
 
     /* * * DON'T EDIT BELOW THIS LINE * * */
     (function() {
