--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -10,10 +10,10 @@
       </div>
       <div class="navbar-collapse collapse">
         <%= users_nav_links %>
-        <%= form_tag "#", class: "search-form" do %>
+        <%= form_tag "/products", class: "search-form", method: :get do %>
           <i class="fa fa-search"></i>
-          <input type="text" name="search" class="col-md-12 pull-right search-txt" placeholder="Search">
-          <i class="fa fa-long-arrow-right"></i>
+          <input type="text" name="q" class="col-md-12 pull-right search-txt" placeholder="Search" required=true>
+          <i class="fa fa-long-arrow-right" onclick="$(this).closest('form').submit();"></i>
         <% end %>
       </div>
     </div>
